src/org/informationsystem/proving/model/parsing/TFFParser.java
// Generated from .\TFF.g4 by ANTLR 4.7.1
package org.informationsystem.proving.model.parsing;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class TFFParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, Or=9, 
		And=10, Iff=11, Impl=12, If=13, Niff=14, Nor=15, Nand=16, Not=17, ForallComb=18, 
		TyForall=19, Infix_inequality=20, Infix_equality=21, Forall=22, ExistsComb=23, 
		TyExists=24, Exists=25, Lambda=26, ChoiceComb=27, Choice=28, DescriptionComb=29, 
		Description=30, EqComb=31, App=32, Assignment=33, Arrow=34, Star=35, Plus=36, 
		Subtype_sign=37, Gentzen_arrow=38, Real=39, Signed_real=40, Unsigned_real=41, 
		Rational=42, Signed_rational=43, Unsigned_rational=44, Integer=45, Signed_integer=46, 
		Unsigned_integer=47, Decimal=48, Positive_decimal=49, Decimal_exponent=50, 
		Decimal_fraction=51, Dot_decimal=52, Exp_integer=53, Signed_exp_integer=54, 
		Unsigned_exp_integer=55, Dollar_word=56, Dollar_dollar_word=57, Upper_word=58, 
		Lower_word=59, Single_quoted=60, Distinct_object=61, WS=62, Line_comment=63, 
		Block_comment=64;
	public static final int
		RULE_fof_quantifier = 0, RULE_binary_connective = 1, RULE_assoc_connective = 2, 
		RULE_unary_connective = 3, RULE_tff_file = 4, RULE_tff_line = 5, RULE_formula_role = 6, 
		RULE_tff_formula = 7, RULE_tff_logic_formula = 8, RULE_tff_binary_formula = 9, 
		RULE_tff_binary_nonassoc = 10, RULE_tff_binary_assoc = 11, RULE_tff_or_formula = 12, 
		RULE_tff_and_formula = 13, RULE_tff_unitary_formula = 14, RULE_tff_quantified_formula = 15, 
		RULE_tff_unary_formula = 16, RULE_tff_atomic_formula = 17, RULE_fof_infix_unary = 18, 
		RULE_fof_term = 19, RULE_argument_list = 20, RULE_argument = 21, RULE_tff_typed_atom = 22, 
		RULE_variable = 23, RULE_variable_list = 24, RULE_name = 25, RULE_atomic_word_list = 26, 
		RULE_atomic_word = 27, RULE_atomic_defined_word = 28, RULE_atomic_system_word = 29, 
		RULE_number = 30, RULE_file_name = 31;
	public static final String[] ruleNames = {
		"fof_quantifier", "binary_connective", "assoc_connective", "unary_connective", 
		"tff_file", "tff_line", "formula_role", "tff_formula", "tff_logic_formula", 
		"tff_binary_formula", "tff_binary_nonassoc", "tff_binary_assoc", "tff_or_formula", 
		"tff_and_formula", "tff_unitary_formula", "tff_quantified_formula", "tff_unary_formula", 
		"tff_atomic_formula", "fof_infix_unary", "fof_term", "argument_list", 
		"argument", "tff_typed_atom", "variable", "variable_list", "name", "atomic_word_list", 
		"atomic_word", "atomic_defined_word", "atomic_system_word", "number", 
		"file_name"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'tff'", "'('", "','", "').'", "'['", "']'", "':'", "')'", "'|'", 
		"'&'", "'<=>'", "'=>'", "'<='", "'<~>'", "'~|'", "'~&'", "'~'", "'!!'", 
		"'!>'", "'!='", "'='", "'!'", "'??'", "'?*'", "'?'", "'^'", "'@@+'", "'@+'", 
		"'@@-'", "'@-'", "'@='", "'@'", "':='", "'>'", "'*'", "'+'", "'<<'", "'-->'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, "Or", "And", "Iff", 
		"Impl", "If", "Niff", "Nor", "Nand", "Not", "ForallComb", "TyForall", 
		"Infix_inequality", "Infix_equality", "Forall", "ExistsComb", "TyExists", 
		"Exists", "Lambda", "ChoiceComb", "Choice", "DescriptionComb", "Description", 
		"EqComb", "App", "Assignment", "Arrow", "Star", "Plus", "Subtype_sign", 
		"Gentzen_arrow", "Real", "Signed_real", "Unsigned_real", "Rational", "Signed_rational", 
		"Unsigned_rational", "Integer", "Signed_integer", "Unsigned_integer", 
		"Decimal", "Positive_decimal", "Decimal_exponent", "Decimal_fraction", 
		"Dot_decimal", "Exp_integer", "Signed_exp_integer", "Unsigned_exp_integer", 
		"Dollar_word", "Dollar_dollar_word", "Upper_word", "Lower_word", "Single_quoted", 
		"Distinct_object", "WS", "Line_comment", "Block_comment"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "TFF.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public TFFParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class Fof_quantifierContext extends ParserRuleContext {
		public TerminalNode Forall() { return getToken(TFFParser.Forall, 0); }
		public TerminalNode Exists() { return getToken(TFFParser.Exists, 0); }
		public Fof_quantifierContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fof_quantifier; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TFFListener ) ((TFFListener)listener).enterFof_quantifier(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TFFListener ) ((TFFListener)listener).exitFof_quantifier(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TFFVisitor ) return ((TFFVisitor<? extends T>)visitor).visitFof_quantifier(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Fof_quantifierContext fof_quantifier() throws RecognitionException {
		Fof_quantifierContext _localctx = new Fof_quantifierContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_fof_quantifier);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(64);
			_la = _input.LA(1);
			if ( !(_la==Forall || _la==Exists) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Binary_connectiveContext extends ParserRuleContext {
		public TerminalNode Iff() { return getToken(TFFParser.Iff, 0); }
		public TerminalNode Impl() { return getToken(TFFParser.Impl, 0); }
		public TerminalNode If() { return getToken(TFFParser.If, 0); }
		public Binary_connectiveContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_binary_connective; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TFFListener ) ((TFFListener)listener).enterBinary_connective(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TFFListener ) ((TFFListener)listener).exitBinary_connective(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TFFVisitor ) return ((TFFVisitor<? extends T>)visitor).visitBinary_connective(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Binary_connectiveContext binary_connective() throws RecognitionException {
		Binary_connectiveContext _localctx = new Binary_connectiveContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_binary_connective);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(66);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << Iff) | (1L << Impl) | (1L << If))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Assoc_connectiveContext extends ParserRuleContext {
		public TerminalNode Or() { return getToken(TFFParser.Or, 0); }
		public TerminalNode And() { return getToken(TFFParser.And, 0); }
		public Assoc_connectiveContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assoc_connective; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TFFListener ) ((TFFListener)listener).enterAssoc_connective(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TFFListener ) ((TFFListener)listener).exitAssoc_connective(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TFFVisitor ) return ((TFFVisitor<? extends T>)visitor).visitAssoc_connective(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Assoc_connectiveContext assoc_connective() throws RecognitionException {
		Assoc_connectiveContext _localctx = new Assoc_connectiveContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_assoc_connective);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(68);
			_la = _input.LA(1);
			if ( !(_la==Or || _la==And) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Unary_connectiveContext extends ParserRuleContext {
		public TerminalNode Not() { return getToken(TFFParser.Not, 0); }
		public Unary_connectiveContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_unary_connective; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TFFListener ) ((TFFListener)listener).enterUnary_connective(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TFFListener ) ((TFFListener)listener).exitUnary_connective(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TFFVisitor ) return ((TFFVisitor<? extends T>)visitor).visitUnary_connective(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Unary_connectiveContext unary_connective() throws RecognitionException {
		Unary_connectiveContext _localctx = new Unary_connectiveContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_unary_connective);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(70);
			match(Not);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Tff_fileContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(TFFParser.EOF, 0); }
		public List<Tff_lineContext> tff_line() {
			return getRuleContexts(Tff_lineContext.class);
		}
		public Tff_lineContext tff_line(int i) {
			return getRuleContext(Tff_lineContext.class,i);
		}
		public Tff_fileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tff_file; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TFFListener ) ((TFFListener)listener).enterTff_file(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TFFListener ) ((TFFListener)listener).exitTff_file(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TFFVisitor ) return ((TFFVisitor<? extends T>)visitor).visitTff_file(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Tff_fileContext tff_file() throws RecognitionException {
		Tff_fileContext _localctx = new Tff_fileContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_tff_file);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(75);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__0) {
				{
				{
				setState(72);
				tff_line();
				}
				}
				setState(77);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(78);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Tff_lineContext extends ParserRuleContext {
		public NameContext name() {
			return getRuleContext(NameContext.class,0);
		}
		public Formula_roleContext formula_role() {
			return getRuleContext(Formula_roleContext.class,0);
		}
		public Tff_formulaContext tff_formula() {
			return getRuleContext(Tff_formulaContext.class,0);
		}
		public Tff_lineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tff_line; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TFFListener ) ((TFFListener)listener).enterTff_line(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TFFListener ) ((TFFListener)listener).exitTff_line(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TFFVisitor ) return ((TFFVisitor<? extends T>)visitor).visitTff_line(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Tff_lineContext tff_line() throws RecognitionException {
		Tff_lineContext _localctx = new Tff_lineContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_tff_line);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(80);
			match(T__0);
			setState(81);
			match(T__1);
			setState(82);
			name();
			setState(83);
			match(T__2);
			setState(84);
			formula_role();
			setState(85);
			match(T__2);
			setState(86);
			tff_formula();
			setState(87);
			match(T__3);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Formula_roleContext extends ParserRuleContext {
		public TerminalNode Lower_word() { return getToken(TFFParser.Lower_word, 0); }
		public Formula_roleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_formula_role; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TFFListener ) ((TFFListener)listener).enterFormula_role(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TFFListener ) ((TFFListener)listener).exitFormula_role(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TFFVisitor ) return ((TFFVisitor<? extends T>)visitor).visitFormula_role(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Formula_roleContext formula_role() throws RecognitionException {
		Formula_roleContext _localctx = new Formula_roleContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_formula_role);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(89);
			match(Lower_word);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Tff_formulaContext extends ParserRuleContext {
		public Tff_logic_formulaContext tff_logic_formula() {
			return getRuleContext(Tff_logic_formulaContext.class,0);
		}
		public Tff_typed_atomContext tff_typed_atom() {
			return getRuleContext(Tff_typed_atomContext.class,0);
		}
		public Tff_formulaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tff_formula; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TFFListener ) ((TFFListener)listener).enterTff_formula(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TFFListener ) ((TFFListener)listener).exitTff_formula(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TFFVisitor ) return ((TFFVisitor<? extends T>)visitor).visitTff_formula(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Tff_formulaContext tff_formula() throws RecognitionException {
		Tff_formulaContext _localctx = new Tff_formulaContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_tff_formula);
		try {
			setState(93);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(91);
				tff_logic_formula();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(92);
				tff_typed_atom();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Tff_logic_formulaContext extends ParserRuleContext {
		public Tff_binary_formulaContext tff_binary_formula() {
			return getRuleContext(Tff_binary_formulaContext.class,0);
		}
		public Tff_unitary_formulaContext tff_unitary_formula() {
			return getRuleContext(Tff_unitary_formulaContext.class,0);
		}
		public Tff_logic_formulaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tff_logic_formula; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TFFListener ) ((TFFListener)listener).enterTff_logic_formula(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TFFListener ) ((TFFListener)listener).exitTff_logic_formula(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TFFVisitor ) return ((TFFVisitor<? extends T>)visitor).visitTff_logic_formula(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Tff_logic_formulaContext tff_logic_formula() throws RecognitionException {
		Tff_logic_formulaContext _localctx = new Tff_logic_formulaContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_tff_logic_formula);
		try {
			setState(97);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(95);
				tff_binary_formula();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(96);
				tff_unitary_formula();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Tff_binary_formulaContext extends ParserRuleContext {
		public Tff_binary_nonassocContext tff_binary_nonassoc() {
			return getRuleContext(Tff_binary_nonassocContext.class,0);
		}
		public Tff_binary_assocContext tff_binary_assoc() {
			return getRuleContext(Tff_binary_assocContext.class,0);
		}
		public Tff_binary_formulaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tff_binary_formula; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TFFListener ) ((TFFListener)listener).enterTff_binary_formula(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TFFListener ) ((TFFListener)listener).exitTff_binary_formula(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TFFVisitor ) return ((TFFVisitor<? extends T>)visitor).visitTff_binary_formula(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Tff_binary_formulaContext tff_binary_formula() throws RecognitionException {
		Tff_binary_formulaContext _localctx = new Tff_binary_formulaContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_tff_binary_formula);
		try {
			setState(101);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(99);
				tff_binary_nonassoc();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(100);
				tff_binary_assoc();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Tff_binary_nonassocContext extends ParserRuleContext {
		public List<Tff_unitary_formulaContext> tff_unitary_formula() {
			return getRuleContexts(Tff_unitary_formulaContext.class);
		}
		public Tff_unitary_formulaContext tff_unitary_formula(int i) {
			return getRuleContext(Tff_unitary_formulaContext.class,i);
		}
		public Binary_connectiveContext binary_connective() {
			return getRuleContext(Binary_connectiveContext.class,0);
		}
		public Tff_binary_nonassocContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tff_binary_nonassoc; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TFFListener ) ((TFFListener)listener).enterTff_binary_nonassoc(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TFFListener ) ((TFFListener)listener).exitTff_binary_nonassoc(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TFFVisitor ) return ((TFFVisitor<? extends T>)visitor).visitTff_binary_nonassoc(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Tff_binary_nonassocContext tff_binary_nonassoc() throws RecognitionException {
		Tff_binary_nonassocContext _localctx = new Tff_binary_nonassocContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_tff_binary_nonassoc);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(103);
			tff_unitary_formula();
			setState(104);
			binary_connective();
			setState(105);
			tff_unitary_formula();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Tff_binary_assocContext extends ParserRuleContext {
		public Tff_or_formulaContext tff_or_formula() {
			return getRuleContext(Tff_or_formulaContext.class,0);
		}
		public Tff_and_formulaContext tff_and_formula() {
			return getRuleContext(Tff_and_formulaContext.class,0);
		}
		public Tff_binary_assocContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tff_binary_assoc; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TFFListener ) ((TFFListener)listener).enterTff_binary_assoc(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TFFListener ) ((TFFListener)listener).exitTff_binary_assoc(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TFFVisitor ) return ((TFFVisitor<? extends T>)visitor).visitTff_binary_assoc(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Tff_binary_assocContext tff_binary_assoc() throws RecognitionException {
		Tff_binary_assocContext _localctx = new Tff_binary_assocContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_tff_binary_assoc);
		try {
			setState(109);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(107);
				tff_or_formula(0);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(108);
				tff_and_formula(0);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
